--- a/routes/views/Example.ejs
+++ b/routes/views/Example.ejs
@@ -495,7 +495,7 @@
         </div>
 
         <div class="offer" id="offer">
-            <h1 class="h1">Example <span>Page</span></h1>
+            <h1 class="h1"><%=pizzaName%><span> Pizza</span></h1>
             <form action="/buy" method="post">
                 <button type="submit" name="submt" class="btn btn-dark" style="margin-left: 500px; margin-top: 50px">Buy</button>
             </form>
