--- a/routes/views/Tours.ejs
+++ b/routes/views/Tours.ejs
@@ -487,7 +487,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/tours" target="_blank">Tours</a>
+                    <a href="/tours" target="_blank">Near</a>
                 </li>
                 <li>
                     <a href="/service">Service</a>
@@ -504,10 +504,13 @@
         </div>
 
         <div class="offer" id="offer">
-            <h1 class="h1">Tours <span>Page</span></h1>
+            <h1 class="h1">Near <span>Page</span></h1>
         </div>
         <div class="list">
             <p>some information</p>
+            <form action="/find" method="post">
+                <button type="submit" name="submit" class="btn btn-dark">find</button>
+            </form>
         </div>
 
     </div>
