--- a/routes/views/Contacts.ejs
+++ b/routes/views/Contacts.ejs
@@ -487,7 +487,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/tours" target="_blank">Tours</a>
+                    <a href="/tours" target="_blank">Near</a>
                 </li>
                 <li>
                     <a href="/service">Service</a>
