--- a/routes/views/Find.ejs
+++ b/routes/views/Find.ejs
@@ -468,7 +468,7 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Service</title>
+    <title>Tours</title>
     <link class="favicon" rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://use.fontawesome.com/80e7d89c39.js"></script>
@@ -504,10 +504,11 @@
         </div>
 
         <div class="offer" id="offer">
-            <h1 class="h1">Service <span>Page</span></h1>
+            <h1 class="h1">Near <span>Page</span></h1>
         </div>
         <div class="list">
-            <p>some information</p>
+
+
         </div>
 
     </div>
