--- a/routes/views/Register.ejs
+++ b/routes/views/Register.ejs
@@ -8,6 +8,7 @@
             padding: 0;
             box-sizing: inherit;
         }
+
         body {
             font-family: 'PT Sans', sans-serif;
             font-size: 16px;
@@ -15,7 +16,7 @@
             font-weight: 400;
             color: #fff;
             width: 50%;
-
+            height: 2000px;
 
             background: url(https://static.tildacdn.com/tild3964-3165-4138-b736-613332383663/IMG_5655.jpg) ;
         }
@@ -28,7 +29,7 @@
             justify-content: center;
 
             width:600px;
-            position: fixed; top: 50%; left: 50%;
+            position: relative; top: 50%; left: 100%;
             -webkit-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
@@ -83,9 +84,6 @@
         }
 
         form {
-
-
-
             display: flex;
             justify-content: center;
             flex-direction: column;
@@ -185,10 +183,48 @@
                 transform: rotate(360deg);
             }
         }
+        main{
+            padding:20px;
+            font-family: 'Helvetica', serif;
+            box-shadow: 5px 5px 7px 5px #888888;
+
+
+        }
+        .main h1{
+            font-size: 40px;
+            text-align:center;
+            font-family: 'Helvetica', serif;
+
+        }
+        input{
+            font-family: 'Helvetica', serif;
+            width: 100%;
+            font-size: 20px;
+            padding: 12px 20px;
+            margin: 8px 0;
+            border: none;
+            border-bottom: 2px solid #767474;
+        }
+        input[type=submit] {
+            font-family: 'Helvetica', serif;
+            width: 100%;
+            background-color: #767474;
+            border: none;
+            color: white;
+            padding: 16px 32px;
+            margin: 4px 2px;
+            border-radius: 10px;
+        }
 
     </style>
     <meta charset="UTF-8">
     <title>Registration</title>
+    <link rel="stylesheet"
+          href=
+          "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity=
+          "sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
     <link class="favicon" rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://use.fontawesome.com/80e7d89c39.js"></script>
@@ -201,22 +237,37 @@
             <h2>Please fill your information in this form</h2>
         </header>
         <main>
-            <form>
-                <div class="form-item box-item">
-                    <input type="text" name="name" class="tx1" placeholder="Username" data-required>
-                </div>
-                <div class="form-item box-item">
-                    <input type="email" name="email" class="tx1" placeholder="Email" data-email data-required>
-                </div>
-                <div class="form-item box-item">
-                    <input type="pass" name="pass" placeholder="Password" data-pass data-required data-count="8" >
-                </div>
-                <div class="form-item box-item">
-                    <input type="text" name="phone" placeholder="Phone" data-required data-number data-count="10">
-                </div>
-                <div class="form-item">
-                    <span id="submit" class="submit">Submit</span>
-                </div>
+            <form action="/sign_up" method="post">
+
+                <input class="box" type="text" name="name" id="name"
+                       placeholder="Name"  required /><br>
+
+                <input class="box" type="email" name="email" id="email"
+                       placeholder="E-Mail " required /><br>
+
+                <input class="box" type="password" name="password"
+                       id="password" placeholder="Password " required/><br>
+
+                <input class="box" type="text" name="phone" id="phone"
+                       placeholder="Phone Number " required/><br>
+                <br>
+                <input type="submit" id="submitDetails"
+                       name="submitDetails" value="Submit" /><br>
+
+            </form>
+            <form action="delete" method="post">
+
+                <input class="box" type="email" name="email" id="email"
+                       placeholder="E-Mail " required /><br>
+                <br>
+                <input type="submit" id="submitDetails"
+                       name="submitDetails" value="Delete" /><br>
+
+            </form>
+            <form action="/getUsers" method="get" >
+                <br>
+                <input type="submit" id="submitDetails"
+                       name="submitDetails" value="GET" /><br>
             </form>
         </main>
         <i class="wave"></i>
