--- a/routes/views/Register.ejs
+++ b/routes/views/Register.ejs
@@ -264,6 +264,14 @@
                        name="submitDetails" value="Delete" /><br>
 
             </form>
+            <form action="/update" method="post" >
+                <input class="box" type="email" name="oldemail" id="oldemail"
+                       placeholder="E-Mail " required /><br>
+                <input class="box" type="email" name="newemail" id="newemail"
+                       placeholder="E-Mail " required /><br>
+                <input type="submit" id="submitDetails"
+                       name="submitDetails" value="Update" /><br>
+            </form>
 
             <form action="/getUsers" method="get" >
                 <br>
